--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/Helsinki
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Advanced Networking
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: ELEC-E7321
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -170,18 +170,26 @@ collections:
   tabs:
     output: true
     sort_by: order
+  articles:
+    output: true
+    permalink: /articles/:path/:title/
 
 defaults:
   - scope:
-      path: "" # An empty string here means all files in the project
-      type: posts
+      path: ""
+      type: articles
     values:
       layout: post
-      comments: true # Enable comments in posts.
-      toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      comments: false
+      toc: true
+      permalink: /:title/
+  - scope:
+      path: "_articles/assignments"
+    values:
+      layout: post
+      comments: false
+      toc: true
+      permalink: /assignments/:title/
   - scope:
       path: _drafts
     values:
@@ -191,7 +199,7 @@ defaults:
       type: tabs # see `site.collections`
     values:
       layout: page
-      permalink: /:title/
+      permalink: /tabs/:title/
 
 sass:
   style: compressed
@@ -217,7 +225,7 @@ exclude:
   - "package*.json"
 
 jekyll-archives:
-  enabled: [categories, tags]
+  enabled: [categories, tags, content]
   layouts:
     category: category
     tag: tag
