--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
-    # default_lang: console
+    default_lang: console
     span:
       line_numbers: false
     block:
@@ -179,6 +179,7 @@ defaults:
       permalink: /:title/
   - scope:
       path: "examples"
+      name: "README.md"
     values:
       layout: post
       comments: false
@@ -186,6 +187,7 @@ defaults:
       permalink: /:path/
   - scope:
       path: "assignments"
+      name: "README.md"
     values:
       layout: post
       comments: false
