--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Europe/Helsinki
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: You Are Not
+title: Temporary
 
-tagline: looking at the right place
+tagline: 
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,15 +26,15 @@ description: >- # used by seo meta and the atom feed
 url: "https://kctong529.github.io"
 
 github:
-  username: PasiSa
+  username: kctong529
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: Pasi Sarolahti
-  email: pasi.sarolahti@aalto.fi
+  name: Ki Chun Tong
+  email: kichun.tong@aalto.fi
   links:
-    - https://github.com/PasiSa
+    - https://github.com/kctong529
     # Uncomment below to add more social links
     # - https://www.linkedin.com/in/username
 
