--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Europe/Helsinki
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Temporary
+title: "wtf suomi"
 
-tagline: 
+tagline: "not just another textbook"
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
